--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Old Clone</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Fira+Code:wght@300..700&family=Noto+Color+Emoji&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Sulphur+Point:wght@300;400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="header">
+        <h1 id="logo">facebook</h1>
+        <div class="login">
+            <div class="email-section">
+                <h4 id="email"> Email or Phone</h4>
+                <input type="text" name="email" id="email-input">
+            </div>
+            <div class="password-section">
+                <h4 id="password"> password</h4>
+                <input type="text" name="password" id="password-input">
+                <h4 id="forgotten-pswd">Forgotten account?</h4>
+            </div>
+        </div>
+        <button id="login-btn">Login</button>
+    </div>
 </body>
+
 </html>
