main-section added, left section content added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         </div>
         <button id="login-btn">Login</button>
     </div>
+    <div class="main-section">
+        <div class="left-section">
+            <h2 id="left-paragraph">Facebook helps you connect and share with the people in your life.</h2>
+            <img id="left-image" src="./images/login-page-image.jpg" alt="image thate representing communication between people around the world">
+        </div>
+
+    </div>
 </body>
 
 </html>
