--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="password-section">
                 <h4 id="password"> password</h4>
-                <input type="text" name="password" id="password-input">
+                <input type="password" name="password" id="password-input">
                 <h4 id="forgotten-pswd">Forgotten account?</h4>
             </div>
         </div>
@@ -32,9 +32,128 @@
     <div class="main-section">
         <div class="left-section">
             <h2 id="left-paragraph">Facebook helps you connect and share with the people in your life.</h2>
-            <img id="left-image" src="./images/login-page-image.jpg" alt="image thate representing communication between people around the world">
+            <img id="left-image" src="./images/login-page-image.jpg"
+                alt="image thate representing communication between people around the world">
         </div>
+        <div class="right-section">
+            <h2>Create an account</h2>
+            <h5>It's quick and easy.</h5>
+            <form action="">
+                <table>
+                    <tr>
+                        <td><input type="text" placeholder="First name"></td>
+                        <td><input type="text" placeholder="Surname"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><input type="text" placeholder="Mobile number or email address"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><input type="password" placeholder="New password"></td>
+                    </tr>
+                </table>
 
+                <div class="birthday">
+                    <h5 class="details">Birthday</h5>
+                    <select name="" id="day">
+                        <option value="01">01</option>
+                        <option value="02">02</option>
+                        <option value="03">03</option>
+                        <option value="04">04</option>
+                        <option value="05">05</option>
+                        <option value="06">06</option>
+                        <option value="07">07</option>
+                        <option value="08">08</option>
+                        <option value="09">09</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                        <option value="24">24</option>
+                        <option value="25">25</option>
+                        <option value="26">26</option>
+                        <option value="27">27</option>
+                        <option value="28">28</option>
+                        <option value="29">29</option>
+                        <option value="30">30</option>
+                        <option value="31">31</option>
+                    </select>
+                    <select name="" id="month">
+                        <option value="01">Jan</option>
+                        <option value="02">Feb</option>
+                        <option value="03">Mar</option>
+                        <option value="04">Apr</option>
+                        <option value="05">May</option>
+                        <option value="06">Jun</option>
+                        <option value="07">Jul</option>
+                        <option value="08">Aug</option>
+                        <option value="09">Sep</option>
+                        <option value="10">Oct</option>
+                        <option value="11">Nov</option>
+                        <option value="12">Dec</option>
+                    </select>
+                    <select name="" id="year">
+                        <option value="1990">1990</option>
+                        <option value="1991">1991</option>
+                        <option value="1992">1992</option>
+                        <option value="1993">1993</option>
+                        <option value="1994">1994</option>
+                        <option value="1995">1995</option>
+                        <option value="1996">1996</option>
+                        <option value="1997">1997</option>
+                        <option value="1998">1998</option>
+                        <option value="1999">1999</option>
+                        <option value="2000">2000</option>
+                        <option value="2001">2001</option>
+                        <option value="2002">2002</option>
+                        <option value="2003">2003</option>
+                        <option value="2004">2004</option>
+                        <option value="2005">2005</option>
+                        <option value="2006">2006</option>
+                        <option value="2007">2007</option>
+                        <option value="2008">2008</option>
+                        <option value="2009">2009</option>
+                        <option value="2010">2010</option>
+                        <option value="2011">2011</option>
+                        <option value="2012">2012</option>
+                        <option value="2013">2013</option>
+                        <option value="2014">2014</option>
+                        <option value="2015">2015</option>
+                        <option value="2016">2016</option>
+                        <option value="2017">2017</option>
+                        <option value="2018">2018</option>
+                        <option value="2019">2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                        <option value="2022">2022</option>
+                        <option value="2023">2023</option>
+                        <option value="2024">2024</option>
+                        <option value="2025">2025</option>
+                    </select>
+                </div>
+
+                <div class="gender">
+                    <h5 class="details">Gender</h5>
+                    <input type="radio" name="gender" id="female"> Female
+                    <input type="radio" name="gender" id="male"> Male
+                    <input type="radio" name="gender" id="custom"> Custom
+                </div>
+
+                <p class="warning-msg">
+                    By clicking Sign Up, you agree to our <span>Terms, Data Policy</span> and <span>Cookie Policy</span>. You may recieve SMS
+                    notifications from us and can opt out at any time.</p>
+                <button id="sign-up-btn">Sign Up</button>
+            </form>
+        </div>
     </div>
 </body>
 
