--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Fira+Code:wght@300..700&family=Noto+Color+Emoji&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Sulphur+Point:wght@300;400;700&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -139,6 +140,9 @@
                         <option value="2024">2024</option>
                         <option value="2025">2025</option>
                     </select>
+                    <i class="fa-solid fa-question" style="color: #ededed;"></i>
+                   
+
                 </div>
 
                 <div class="gender">
@@ -146,6 +150,7 @@
                     <input type="radio" name="gender" id="female"> Female
                     <input type="radio" name="gender" id="male"> Male
                     <input type="radio" name="gender" id="custom"> Custom
+                    <i class="fa-solid fa-question" style="color: #ededed;"></i>
                 </div>
 
                 <p class="warning-msg">
